# Case_Lab_Atom

./: .gitignore  Model Training.ipynb  README.md  The code of the models for the web service.py  logistic_model.pkl  nltk_setup.py  pyproject.toml  ridge_model.pkl  tfidf_vectorizer.pkl
