[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["meowsl"]
readme = "README.md"

[tool.taskipy.tasks]
manage = "python ./server/manage.py"
migrate = "task manage migrate --noinput"
server = "task manage runserver"
prenltk = "task manage prenltk"
gunicorn = "gunicorn --timeout 300 --chdir ./server server.wsgi:application -b 0.0.0.0:8000"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
taskipy = "^1.13.0"
joblib = "^1.4.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"
textstat = "^0.7.4"
scipy = "^1.14.1"
gunicorn = "^23.0.0"
wheel = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
